changed popup position to fix so it can be seen on mobile devices and increased the width to 80% on mobile

--- a/Clothingpicker/src/App.css
+++ b/Clothingpicker/src/App.css
@@ -5,7 +5,7 @@
   color: white;
   border: 2px solid white;
   border-radius: 15px;
-  position: absolute;
+  position: fixed;
   left: 50%;
   top: 2rem;
   transform: translateX(-50%);
@@ -54,5 +54,8 @@
   }
   .slide:hover .clothingoptions {
     bottom: 15%;
+  }
+  .popup {
+    width: 80%;
   }
 }
